tests/fixtures/nupm/rejected/unknown-type/nupm.nuon
{
    name: mystery
    type: overlay
    version: "0.0.1"
}
